[travel-plan] refactor stay edit
